--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,1 +1,33 @@
-<p>Hello world</p>
+{% load static from staticfiles %}
+
+<head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>{% block title %}LitCity{% endblock %}</title>
+    <meta name="description" content="" />
+    <meta name="keywords" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <!-- Google Webfonts -->
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600|PT+Serif:400,400italic' rel='stylesheet' type='text/css'>
+
+    <link rel="stylesheet" href="{% static 'css/style.css' %}" id="main-styles">
+
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+
+    <script>window.jQuery || document.write('<script src="js/vendor/jquery/jquery-1.11.0.min.js"><\/script>')</script>
+
+    {% block extra_css %}
+        {# Override this in templates to add extra stylesheets #}
+    {% endblock %}
+</head>
+
+<body>
+    <p>Hello world</p>
+</body>
+
+<script type="text/javascript">
+    $(document).ready(function() {
+        console.log('hi');
+    })
+</script>
