Add footer with links

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -25,5 +25,7 @@
 {% block body %}
 {% endblock %}
 
+<p class="footer">A hack from <a href="http://codexhackathon.com/">Codex MIT Media Lab</a>. See <a href="https://hackdash.org/projects/56912a1e62b2cc5d050af6d2">more info</a> and <a href="http://github.com/mailbackwards/litcity">Github</a></p>
+
 {% block js %}
 {% endblock %}
